--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -9,6 +9,11 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 
+resources.db.adapter = pdo_mysql
+resources.db.params.host = 0.0.0.0
+resources.db.params.username = "root"
+resources.db.params.password = "mtadmin"
+resources.db.params.dbname = "am"
 resources.db.params.charset = utf8
 
 [staging : production]
