--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -12,7 +12,7 @@ resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.db.adapter = pdo_mysql
 resources.db.params.host = 0.0.0.0
 resources.db.params.username = "root"
-resources.db.params.password = "mtadmin"
+resources.db.params.password = "admin123"
 resources.db.params.dbname = "am"
 resources.db.params.charset = utf8
 
